--- a/style.css
+++ b/style.css
@@ -1,14 +1,35 @@
+body > * {
+    border: 1px solid #000;
+}
+
+html, body {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     height: 100dvh;
-
     display: grid;
     grid-template: 175px 1fr / 300px 1fr;
     grid-template-areas: 
     "dashboard nav"
     "dashboard main_content";
-
 }
 
-* {
-    border: 1px solid #000;
+.dashboard-container {
+    grid-area: dashboard;
+    display: grid;
+    grid-template-rows: 75px 1fr;
 }
+
+ul {
+    list-style-type: none;
+    margin-bottom: 1rem;
+    margin-top: 0px;
+    padding-left: 0px;
+}
+
+li {
+    padding: 4px 0px;
+}
+
