--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ body > * {
     padding: 1rem;
 }
 
+p {
+    margin: 0px;
+}
+
+.main-content-container * {
+    border: 1px solid #000;
+}
+
 html, body {
     margin: 0px;
     padding: 0px;
@@ -80,4 +88,19 @@ input[type=search] {
     "projects announcements" 1fr
     "projects trending" 1fr
     / 1fr 300px;
+}
+
+.projects-container {
+    grid-area: projects;
+}
+
+.projects-container > .cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.card {
+    height: 200px;
 }
