--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ input[type=search] {
     height: 300px;
     display: flex;
     flex-direction: column;
+    transition: 0.3s;
+}
+.card:hover {
+    scale: 1.01;
 }
 
 /* Hide the scroll bar on the cards */
@@ -119,6 +123,11 @@ input[type=search] {
     display: none;
 }
 
+.card-footer {
+    display: flex;
+    justify-content: end;
+    gap: 1rem;
+}
 .announcements-container {
     display: flex;
     flex-direction: column;
