--- a/style.css
+++ b/style.css
@@ -33,8 +33,12 @@ body {
     grid-area: dashboard;
     display: grid;
     grid-template-rows: var(--dashboard-logo-section-height) 1fr;
+    padding: 1rem 2rem;
 }
 
+.navigation {
+    margin-top: 2rem;
+}
 ul {
     list-style-type: none;
     margin-bottom: 1rem;
@@ -44,6 +48,9 @@ ul {
 
 li {
     padding: 4px 0px;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .header-container {
@@ -85,8 +92,8 @@ input[type=search] {
 .main-content-container {
     display: grid;
     grid-template: 
-    "projects announcements" 1fr
-    "projects trending" 1fr
+    "projects announcements" auto
+    "projects trending" auto
     / 1fr 300px;
     gap: 2rem 1rem;
 }
@@ -103,14 +110,16 @@ input[type=search] {
 }
 
 .card {
-    height: 300px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     transition: 0.3s;
+    padding: 2.5rem 0px;
 }
 .card:hover {
     scale: 1.01;
 }
+
 
 /* Hide the scroll bar on the cards */
 .card-body {
@@ -127,6 +136,7 @@ input[type=search] {
     display: flex;
     justify-content: end;
     gap: 1rem;
+    padding-right: 1rem;
 }
 .announcements-container {
     display: flex;
@@ -148,4 +158,82 @@ hr {
     background-color: grey;
     height: 1px;
     border: none;
+}
+
+.trending-div-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+.trending-div {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    margin-bottom: 1rem;
+}
+
+h4 {
+    margin: 2px;
+}
+
+h3 {
+    margin: 4px 0px;
+}
+
+.circle {
+    border-radius: 100%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle-small {
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle > img, .circle-small > img {
+    width: 70%;
+}
+
+.dinosaur {
+    background-color: rgb(255, 179, 0);
+}
+
+.aquarium {
+    background-color: aliceblue;
+}
+
+.bear {
+    background-color: rgb(255, 255, 113);
+}
+
+.bee {
+    background-color: rgb(244, 105, 105);
+}
+
+.shiba {
+    background-color: rgb(196, 249, 116);
+}
+
+.icons {
+    width: 1.2rem;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: 1rem 0px;
+}
+.logo-icon {
+    width: 4rem;
 }
