--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 
 body > * {
-    border: 1px solid #000;
     padding: 1rem;
 }
 
@@ -26,7 +25,7 @@ html, body {
 body {
     height: 100dvh;
     display: grid;
-    grid-template: 175px 1fr / 300px 1fr;
+    grid-template: 225px 1fr / 300px 1fr;
     grid-template-areas: 
     "dashboard nav"
     "dashboard main_content";
@@ -72,13 +71,25 @@ li > img {
 .header-container {
     display: grid;
     grid-template-rows: var(--dashboard-logo-section-height) calc(175px - var(--dashboard-logo-section-height));
-    grid-template-columns: 1fr minmax(250px, 300px);
+    grid-template-columns: 1fr minmax(250px, 400px);
+    padding: 2rem;
+    padding-bottom: 0px;
+    z-index: 1;
+    box-shadow: 0px 10px 13px -9px rgba(0,0,0,0.75);
+
 }
 
 .user-hello {
     display: flex;
     align-items: center; 
-    gap: 2rem;  
+    gap: 2rem; 
+    font-weight: 500; 
+    width: 80%;
+}
+
+#user-tag {
+    font-size: 2rem;
+    min-width: 200px;
 }
 
 .user-buttons {
@@ -87,11 +98,15 @@ li > img {
     align-items: center;    
 }
 
+.user-buttons, .user-hello {
+    height: 80%;
+}
+
 .user-info {
     display: flex;
     justify-content: end;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
     padding-right: 2rem;
 }
 
@@ -99,6 +114,7 @@ li > img {
     display: flex;
     align-items: center;
     gap: 1rem;
+    width: 90%;
 }
 
 input[type=search] {
@@ -126,7 +142,7 @@ input[type=search] {
 
 .projects-container > .cards-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 2rem;
     padding: 2rem;
     padding-top: 1rem;
@@ -199,9 +215,13 @@ hr {
     display: flex;
     justify-content: center;
     align-items: start;
-    margin-bottom: 1rem;
+    transition: 0.5s;
+    border-radius: var(--border-radius);
 }
 
+.trending-div > * {
+    margin: 0.5rem;
+}
 h4 {
     margin: 2px;
     font-weight: 500;
@@ -219,6 +239,7 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
 
 .circle-small {
@@ -228,6 +249,7 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
 
 .circle > img, .circle-small > img {
@@ -278,4 +300,56 @@ h3 {
 .card, .announcements-div, .trending-div-container {
     background-color: white;
     box-shadow: 11px 11px 44px -16px rgba(0,0,0,0.75);
+}
+
+input[type="search"] {
+    background-color: #E2E8F0;
+    border-radius: 1rem;
+    border: none;
+    height: 2rem;
+    caret-color: #00000091;
+    padding: 0.5rem;
+    padding-left: 2.5rem;
+    font-size: 1.2rem;
+    max-width: 1200px;
+    transition: 0.3s;
+}
+
+input[type="search"]:hover, input[type="search"]:focus {
+    background-color: #f0f2f4;
+    border: 2px solid blue;
+}
+
+.search-bar {
+    position: relative;
+}
+
+#search-icon {
+    position: absolute;
+    left: 0.8rem;
+}
+
+.user-buttons > button {
+    padding: 0.6rem 1.8rem;
+    font-weight: 700;
+    font-size: 1.1rem;
+    color: white;
+    background-color: #36b3e8;
+    border-radius: 2rem;
+    border: none;
+    margin: 0px 0.8rem;
+}
+
+.user-buttons > button:hover {
+    cursor: pointer;
+    background-color: #36b3e8ce;
+}
+
+.user-info > *:hover {
+    cursor: pointer;
+}
+
+.trending-div:hover {
+    scale: 1.05;
+    background-color: rgba(128, 128, 128, 0.091);
 }
